[package]
name = "cc-sessions-cross"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Cross-platform Claude Code session browser with status management"
license = "MIT"
repository = "https://github.com/rehack703/cc-sessions-cross"

[[bin]]
name = "cc-sessions"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
walkdir = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1"
memchr = "2"
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = "0.29"
shellexpand = "3"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
